--- a/index.html
+++ b/index.html
@@ -661,8 +661,7 @@
                             </button>
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
-                                    <!-- <iframe src="https://www.youtube.com/embed/_mqftCUHA4M?feature=oembed" frameborder="0"></iframe> -->
-                                    <iframe src="" frameborder="0"></iframe>
+                                    <iframe src="https://www.youtube.com/embed/_mqftCUHA4M?feature=oembed" frameborder="0"></iframe>
                                 </div>
                             </div>
                             <button class="nav__controler slider__next">
