homepage desktop done

--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
     <header class="header">
         <div class="container">
             <nav class="navbar p-0">
-                <a href="index5.html">
+                <a href="index.html">
                     <img 
                         src="assets/images/logo.png" 
                         width="250"
                         class="site-logo"
                         alt="Tammuz Trading Contracting W.L.L."
-                    />
+                    >
                 </a>
                 <div class="menu-wrapper ms-auto">
                     <ul class="main-menu">
@@ -99,7 +99,7 @@
                             <i class="fal fa-phone-alt"></i>
                         </a>
                     </div>
-                    <button class="menu-toggler">
+                    <button type="button" class="menu-toggler" aria-label="Open Mobile Menu">
                         <i class="fal fa-bars"></i>
                     </button>
                 </div>
@@ -110,32 +110,56 @@
         <div class="mobile-header">
             <a href="#">
                 <img 
-                    src="assets/images/logo-white.svg"
+                    src="assets/images/logo.png"
                     width="120" 
                     alt="Tammuz Trading Contracting W.L.L."
-                />
+                >
             </a>
-            <div class="close-menu">
+            <button type="button" class="close-menu" aria-label="Close Mobile Menu">
                 <i class="fal fa-times"></i>
-            </div>
+            </button>
         </div>
 
-        <div class="menu"></div>
+        <div class="menu">
+            <ul class="main-menu">
+                <li class="menu-item">
+                    <a href="javascript:void(0)">HOME</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#">SERVICES</a>
+                </li>
+                <li class="menu-item menu-item-has-submenu">
+                    <a href="#">ABOUT</a>
+                    <ul class="sub-menu">
+                        <li class="menu-item">
+                            <a href="">About Us</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">Organization Charts</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="">Organization Charts</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="menu-item">
+                    <a href="#">PROJECTS</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#">BLOGS</a>
+                </li>
+                <li class="menu-item">
+                    <a href="#">CONTACTS</a>
+                </li>
+            </ul>
+        </div>
 
-        <div class="menu-footer text-center">
+        <div class="menu-footer">
             <div class="social-media">
-                <a href="#">
-                    <i class="flaticon-facebook"></i>
-                </a>
-                <a href="#">
-                    <i class="flaticon-twitter"></i>
-                </a>
-                <a href="#">
-                    <i class="flaticon-pinterest"></i>
-                </a>
-                <a href="#">
-                    <i class="flaticon-linkedin"></i>
-                </a>
+                <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
+                <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-p"></i></a>
+                <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
             </div>
             <p class="copyright">
                 Copyright 2024 all rights reserved
@@ -532,7 +556,7 @@
         <!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
         Start Our Works Section
         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
-        <div class="our__works">
+        <div class="our__works" style="background-image: url(assets/images/works/works-section-bg.png);">
             <div class="container">
                 <div class="section-title">
                     <div class="subtitle">
@@ -554,10 +578,10 @@
                                             src="assets/images/works/1.png" 
                                             alt=""
                                         >
-                                    </div>
-                                    <div class="description">
-                                        AL BIDAA PARK
-                                        <div class="line"></div>
+                                        <div class="description">
+                                            AL BIDAA PARK
+                                            <div class="line"></div>
+                                        </div>
                                     </div>
                                     <a href="#" class="stretched-link"></a>
                                 </div>
@@ -572,10 +596,10 @@
                                             src="assets/images/works/2.png" 
                                             alt=""
                                         >
-                                    </div>
-                                    <div class="description">
-                                        MASSILA PRIVATE VILLA
-                                        <div class="line"></div>
+                                        <div class="description">
+                                            MASSILA PRIVATE VILLA
+                                            <div class="line"></div>
+                                        </div>
                                     </div>
                                     <a href="#" class="stretched-link"></a>
                                 </div>
@@ -590,10 +614,10 @@
                                             src="assets/images/works/3.png" 
                                             alt=""
                                         >
-                                    </div>
-                                    <div class="description">
-                                        AL WAKRA HERITAGE VILLAGE
-                                        <div class="line"></div>
+                                        <div class="description">
+                                            AL WAKRA HERITAGE VILLAGE
+                                            <div class="line"></div>
+                                        </div>
                                     </div>
                                     <a href="#" class="stretched-link"></a>
                                 </div>
@@ -608,10 +632,10 @@
                                             src="assets/images/works/5.png" 
                                             alt=""
                                         >
-                                    </div>
-                                    <div class="description">
-                                        PRIVATE VILLA
-                                        <div class="line"></div>
+                                        <div class="description">
+                                            PRIVATE VILLA
+                                            <div class="line"></div>
+                                        </div>
                                     </div>
                                     <a href="#" class="stretched-link"></a>
                                 </div>
@@ -626,10 +650,10 @@
                                             src="assets/images/works/4.png" 
                                             alt=""
                                         >
-                                    </div>
-                                    <div class="description">
-                                        AL WAKRA HERITAGE VILLAGE
-                                        <div class="line"></div>
+                                        <div class="description">
+                                            AL WAKRA HERITAGE VILLAGE
+                                            <div class="line"></div>
+                                        </div>
                                     </div>
                                     <a href="#" class="stretched-link"></a>
                                 </div>
@@ -656,15 +680,18 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-10 col-xl-9">
                         <div class="video__wrapper swiper">
-                            <button class="nav__controler slider__prev">
+                            <button class="nav__controler slide__prev">
                                 <i class="fal fa-chevron-left"></i>
                             </button>
                             <div class="swiper-wrapper">
                                 <div class="swiper-slide">
                                     <iframe src="https://www.youtube.com/embed/_mqftCUHA4M?feature=oembed" frameborder="0"></iframe>
                                 </div>
+                                <div class="swiper-slide">
+                                    <iframe src="https://www.youtube.com/embed/_mqftCUHA4M?feature=oembed" frameborder="0"></iframe>
+                                </div>
                             </div>
-                            <button class="nav__controler slider__next">
+                            <button class="nav__controler slide__next">
                                 <i class="fal fa-chevron-right"></i>
                             </button>
                         </div>
@@ -689,7 +716,7 @@
                 </div>
                 <div class="contact-form">
                     <div class="row g-5">
-                        <div class="col-lg-8">
+                        <div class="col-lg-7">
                             <form action="#">
                                 <div class="row g-5">
                                     <div class="col-sm-6">
@@ -725,10 +752,17 @@
                                             </label>
                                         </div>
                                     </div>
+                                    <div class="col-12">
+                                        <div class="form-group">
+                                            <button type="submit" class="btn__secondary">
+                                                SEND MESSAGE
+                                            </button>
+                                        </div>
+                                    </div>
                                 </div>
                             </form>
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-lg-5">
                             <ul class="contacts__list">
                                 <li>
                                     <div class="icon">
@@ -736,7 +770,7 @@
                                     </div>
                                     <div class="desc">
                                         <h5 class="fw-bold">Address</h5>
-                                        <address>
+                                        <address class="m-0">
                                             Al Kindi Complex, Al Sad, <br> Al Jouan Street Building 78, Doha, Qatar
                                         </address>
                                     </div>
@@ -869,9 +903,157 @@
     Start Site Footer
     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->
     <footer style="background-image: url(assets/images/footer-bg.jpg);">
-        <div class="footer-top">
+        <div class="footer__top">
             <div class="container">
-                .
+                <div class="row g-5">
+                    <!-- Widget Column Start -->
+                    <div class="col-sm-6 col-md-3">
+                        <div class="footer-widget">
+                            <div class="site-logo mb-5">
+                                <a href="#">
+                                    <img 
+                                        src="assets/images/logo-white.png"
+                                        width="230" 
+                                        alt="Tammuz Trading Contracting W.L.L."
+                                    >
+                                </a>
+                            </div>
+                            <p>
+                                Tammuz Trading & Contracting W.L.L. is a leading company in the contracting industry with over 25 years of experience in Qatar and the region. Since its inception, Tammuz has built a reputation for delivering state-of-the- art solutions and services
+                            </p>
+                        </div>
+                    </div>
+                    <!-- Widget Column End -->
+
+                    <!-- Widget Column Start -->
+                    <div class="col-sm-6 col-md-3">
+                        <div class="footer-widget">
+                           <h4 class="wiget__title">
+                                Important Links
+                           </h4>
+                           <ul class="links">
+                                <li>
+                                    <a href="#">
+                                        Home
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        About Us
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Our Projects
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Recent Works
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        News & Blogs
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Contact Us
+                                    </a>
+                                </li>
+                           </ul>
+                        </div>
+                    </div>
+                    <!-- Widget Column End -->
+
+                    <!-- Widget Column Start -->
+                    <div class="col-sm-6 col-md-3">
+                        <div class="footer-widget">
+                           <h4 class="wiget__title">
+                                Our Services
+                           </h4>
+                           <ul class="links">
+                                <li>
+                                    <a href="#">
+                                        See All Services
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Civil Construction
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Landscape
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Irrigation & Drainage
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Operation & Maintenance
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Outdoor Lighting
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        Trading
+                                    </a>
+                                </li>
+                           </ul>
+                        </div>
+                    </div>
+                    <!-- Widget Column End -->
+
+                    <!-- Widget Column Start -->
+                    <div class="col-sm-6 col-md-3">
+                        <div class="footer-widget">
+                           <h4 class="wiget__title">
+                                Working Hours
+                           </h4>
+                           <ul class="working_hrs">
+                                <li>
+                                    <span>SUNDAY</span>
+                                    <span>8:00 - 17:00</span>
+                                </li>
+                                <li>
+                                    <span>MONDAY</span>
+                                    <span>8:00 - 17:00</span>
+                                </li>
+                                <li>
+                                    <span>TUESDAY</span>
+                                    <span>8:00 - 17:00</span>
+                                </li>
+                                <li>
+                                    <span>WEDNESDAY</span>
+                                    <span>8:00 - 17:00</span>
+                                </li>
+                                <li>
+                                    <span>THURSDAY</span>
+                                    <span>8:00 - 17:00</span>
+                                </li>
+                                <li>
+                                    <span>FRIDAY</span>
+                                    <span>8:00 - 17:00</span>
+                                </li>
+                                <li>
+                                    <span>Saturday</span>
+                                    <span>CLOSED</span>
+                                </li>
+                           </ul>
+                        </div>
+                    </div>
+                    <!-- Widget Column End -->
+                </div>
             </div>
         </div>
         <div class="footer__bottom">
@@ -879,9 +1061,7 @@
                 <div class="footer__inner">
                     <p class="copyright">
                         &copy;
-                        <span class="dynamic-year">
-                            <script>document.write(new Date().getFullYear())</script>
-                        </span>
+                        <span class="dynamic__year"></span>
                         &nbsp;
                         TAMMUZ Trading & Contracting W.L.L. All Rights Reserved
                     </p>
@@ -924,6 +1104,13 @@
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/swiper-bundle.min.js"></script>
     <script src="assets/js/script.js"></script>
+
+    <script>
+        $(document).ready(function() {
+            var dynamicYear = new Date().getFullYear();
+            $('.dynamic__year').text(dynamicYear);
+        });
+    </script>
 
 </body>
 </html>
