home page done with responsive

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <a href="#">
                 <img 
                     src="assets/images/logo.png"
-                    width="120" 
+                    width="150" 
                     alt="Tammuz Trading Contracting W.L.L."
                 >
             </a>
@@ -121,6 +121,9 @@
         </div>
 
         <div class="menu">
+            <h4>
+                Navigation
+            </h4>
             <ul class="main-menu">
                 <li class="menu-item">
                     <a href="javascript:void(0)">HOME</a>
@@ -129,7 +132,7 @@
                     <a href="#">SERVICES</a>
                 </li>
                 <li class="menu-item menu-item-has-submenu">
-                    <a href="#">ABOUT</a>
+                    <a href="javascript:void(0)">ABOUT</a>
                     <ul class="sub-menu">
                         <li class="menu-item">
                             <a href="">About Us</a>
@@ -155,15 +158,13 @@
         </div>
 
         <div class="menu-footer">
+            <h4>Follow us on:</h4>
             <div class="social-media">
                 <a href="https://www.facebook.com/"><i class="fab fa-facebook-f"></i></a>
                 <a href="https://twitter.com/"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.pinterest.com/"><i class="fab fa-pinterest-p"></i></a>
                 <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
             </div>
-            <p class="copyright">
-                Copyright 2024 all rights reserved
-            </p>
         </div>
     </div>
     <!--~~./ end site header ~~-->
@@ -237,7 +238,7 @@
             <div class="container">
                 <div class="row g-5">
                     <!-- Features Item -->
-                    <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-sm-6 col-lg-3">
                         <div class="features__item">
                             <div class="icon">
                                 <img 
@@ -258,7 +259,7 @@
                         </div>
                     </div>
                     <!-- Features Item -->
-                    <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-sm-6 col-lg-3">
                         <div class="features__item">
                             <div class="icon">
                                 <img 
@@ -279,7 +280,7 @@
                         </div>
                     </div>
                     <!-- Features Item -->
-                    <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-sm-6 col-lg-3">
                         <div class="features__item">
                             <div class="icon">
                                 <img 
@@ -300,7 +301,7 @@
                         </div>
                     </div>
                     <!-- Features Item -->
-                    <div class="col-sm-6 col-md-4 col-lg-3">
+                    <div class="col-sm-6 col-lg-3">
                         <div class="features__item">
                             <div class="icon">
                                 <img 
@@ -332,7 +333,7 @@
         <div class="advantages">
             <div class="container">
                 <div class="row g-5">
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="image__mockup">
                             <img 
                                 src="assets/images/advantages/img1.jpg" 
@@ -346,7 +347,7 @@
                             />
                         </div>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-lg-6">
                         <div class="section__content">
                             <div class="subtitle">
                                 ADVANTAGES
@@ -907,7 +908,7 @@
             <div class="container">
                 <div class="row g-5">
                     <!-- Widget Column Start -->
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-6 col-lg-3">
                         <div class="footer-widget">
                             <div class="site-logo mb-5">
                                 <a href="#">
@@ -926,7 +927,7 @@
                     <!-- Widget Column End -->
 
                     <!-- Widget Column Start -->
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-6 col-lg-3">
                         <div class="footer-widget">
                            <h4 class="wiget__title">
                                 Important Links
@@ -968,7 +969,7 @@
                     <!-- Widget Column End -->
 
                     <!-- Widget Column Start -->
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-6 col-lg-3">
                         <div class="footer-widget">
                            <h4 class="wiget__title">
                                 Our Services
@@ -1015,7 +1016,7 @@
                     <!-- Widget Column End -->
 
                     <!-- Widget Column Start -->
-                    <div class="col-sm-6 col-md-3">
+                    <div class="col-sm-6 col-lg-3">
                         <div class="footer-widget">
                            <h4 class="wiget__title">
                                 Working Hours
