--- a/index.html
+++ b/index.html
@@ -63,16 +63,13 @@
                 <div class="menu-wrapper ms-auto">
                     <ul class="main-menu">
                         <li class="menu-item">
-                            <a href="javascript:void(0)">HOME</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">SERVICES</a>
+                            <a href="services.html">SERVICES</a>
                         </li>
                         <li class="menu-item menu-item-has-submenu">
-                            <a href="#">ABOUT</a>
+                            <a href="about.html">ABOUT</a>
                             <ul class="sub-menu">
                                 <li class="menu-item">
-                                    <a href="">About Us</a>
+                                    <a href="about.html">About Us</a>
                                 </li>
                                 <li class="menu-item">
                                     <a href="">Organization Charts</a>
@@ -83,13 +80,16 @@
                             </ul>
                         </li>
                         <li class="menu-item">
-                            <a href="#">PROJECTS</a>
+                            <a href="projects.html">PROJECTS</a>
                         </li>
                         <li class="menu-item">
-                            <a href="#">BLOGS</a>
+                            <a href="works.html">WORKS</a>
                         </li>
                         <li class="menu-item">
-                            <a href="#">CONTACTS</a>
+                            <a href="blogs.html">BLOGS</a>
+                        </li>
+                        <li class="menu-item">
+                            <a href="contact.html">CONTACTS</a>
                         </li>
                     </ul>
                 </div>
@@ -108,7 +108,7 @@
     </header>
     <div class="mobile-menu">
         <div class="mobile-header">
-            <a href="#">
+            <a href="index.html">
                 <img 
                     src="assets/images/logo.png"
                     width="150" 
@@ -126,33 +126,36 @@
             </h4>
             <ul class="main-menu">
                 <li class="menu-item">
-                    <a href="javascript:void(0)">HOME</a>
+                    <a href="index.html">HOME</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#">SERVICES</a>
+                    <a href="services.html">SERVICES</a>
                 </li>
                 <li class="menu-item menu-item-has-submenu">
                     <a href="javascript:void(0)">ABOUT</a>
                     <ul class="sub-menu">
                         <li class="menu-item">
-                            <a href="">About Us</a>
+                            <a href="about.html">ABOUT US</a>
                         </li>
                         <li class="menu-item">
-                            <a href="">Organization Charts</a>
+                            <a href="#">ORGANIZATION CHARTS</a>
                         </li>
                         <li class="menu-item">
-                            <a href="">Organization Charts</a>
+                            <a href="#">LOREM IPSUM</a>
                         </li>
                     </ul>
                 </li>
                 <li class="menu-item">
-                    <a href="#">PROJECTS</a>
+                    <a href="projects.html">PROJECTS</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#">BLOGS</a>
+                    <a href="works.html">WORKS</a>
                 </li>
                 <li class="menu-item">
-                    <a href="#">CONTACTS</a>
+                    <a href="blogs.html">BLOGS</a>
+                </li>
+                <li class="menu-item">
+                    <a href="contact.html">CONTACTS</a>
                 </li>
             </ul>
         </div>
@@ -927,39 +930,39 @@
                     <!-- Widget Column End -->
 
                     <!-- Widget Column Start -->
-                    <div class="col-sm-6 col-lg-3">
+                    <div class="col-6 col-lg-3">
                         <div class="footer-widget">
                            <h4 class="wiget__title">
                                 Important Links
                            </h4>
                            <ul class="links">
                                 <li>
-                                    <a href="#">
+                                    <a href="index.html">
                                         Home
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="about.html">
                                         About Us
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="projects.html">
                                         Our Projects
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="works.html">
                                         Recent Works
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="blogs.html">
                                         News & Blogs
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="contact.html">
                                         Contact Us
                                     </a>
                                 </li>
@@ -969,14 +972,14 @@
                     <!-- Widget Column End -->
 
                     <!-- Widget Column Start -->
-                    <div class="col-sm-6 col-lg-3">
+                    <div class="col-6 col-lg-3">
                         <div class="footer-widget">
-                           <h4 class="wiget__title">
+                            <h4 class="wiget__title">
                                 Our Services
-                           </h4>
-                           <ul class="links">
+                            </h4>
+                            <ul class="links">
                                 <li>
-                                    <a href="#">
+                                    <a href="services.html">
                                         See All Services
                                     </a>
                                 </li>
@@ -1010,7 +1013,7 @@
                                         Trading
                                     </a>
                                 </li>
-                           </ul>
+                            </ul>
                         </div>
                     </div>
                     <!-- Widget Column End -->
